--- a/admin.html
+++ b/admin.html
@@ -55,7 +55,7 @@ h1, h2, h3, h4, h5, h6 {
 						<ul>
 							<li><a href="#"><img src="images/diyya.png"><span>Diyya Syahira<br><b>Finance Department</b></span></a>
 						</li>
-						<li> <a href="#"><img src="images/Nik.png"><span>Nik Aiman<br><b>Human Resource Department</b></span></a>
+						<li> <a href="#"><img src="images/nik.png"><span>Nik Aiman<br><b>Human Resource Department</b></span></a>
 					</li>
 					<li><a href="#"><img src="images/Luqman.png"><span>Luqman Arief<br><b>Quality Check Department</b></span></a></li>
 				</ul>
